# LooksLikeJEPA

./: .gitignore  environment.json  pyproject.toml  requirements_frozen.txt  slurm-10851616.out
eval/: ds.py  log.py  loss.py  repro_sigreg.py  run_CL.py  run_JEPA.py
scripts/: experiments.md  fewshot.sh  pca_viz.py  save_imagenet_examples.py  test_bench.sh  train.sh  train_cl.sh  train_ddp.sh  train_jepa_vit.sh
src/: clustering.py  cov.py  ds.py  encoder.py  linear_probe.py  mixed_view_ds.py  paper.py  run_training_loop.py  trainer.py
src/losses/: lejepa.py  loss.py
