[project]
name = "jepa-tests"
version = "0.1.0"
description = "LeJEPA view-strategy experiments for self-supervised representation learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "faiss-gpu-cu12>=1.9.0",
    "huggingface-hub>=0.23.0",
    "hydra-core>=1.3.0",
    "lightning>=2.3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "pymetis>=2025.2.2",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "timm>=1.0.3",
    "torch>=2.4.0",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "triton>=3.0.0",
    "wandb>=0.17.0",
    "gdown>=5.2.1",
]
