[project]
name = "jepa-tests"
version = "0.1.0"
description = "LeJEPA view-strategy experiments for self-supervised representation learning"
readme = "README.md"
requires-python = ">=3.10"
# Torch CUDA wheels (pick one stack per venv — GPU generation differs):
# - pytorch-cu128 + torch>=2.7: Blackwell (sm_120), e.g. RTX PRO 6000 / 50-series. Required for
#   "no kernel image is available" on those GPUs.
# - pytorch-cu124 + torch 2.5.x: older drivers / Ampere–Hopper nodes where cu128 is rejected
#   ("driver too old"). Reinstall with cu124 index if needed.
dependencies = [
    "datasets>=2.20.0",
    "faiss-gpu-cu12>=1.9.0",
    "huggingface-hub>=0.23.0",
    "hydra-core>=1.3.0",
    "lightning>=2.3.0",
    "loguru>=0.7.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "pymetis>=2025.2.2",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "timm>=1.0.3",
    "torch>=2.7.0,<2.9",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "torchvision>=0.22.0,<0.24",
    "tqdm>=4.66.0",
    "triton>=3.0.0",
    "wandb>=0.17.0",
    "gdown>=5.2.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
